// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componente <GifExpertApp /> debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
</Fragment>
`;

exports[`Pruebas sobre el componente <GifExpertApp /> debe mostrar una lista de categorías 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <GifGrid
    category="Pikatchu"
    key="Pikatchu"
  />
  <GifGrid
    category="Goku"
    key="Goku"
  />
</Fragment>
`;
